--- a/wp-content/uploads/elementor/css/post-60.css
+++ b/wp-content/uploads/elementor/css/post-60.css
@@ -1,3 +1,4 @@
+.elementor-60 .elementor-element.elementor-element-4e7a5b0 .elementor-spacer-inner {height: 30px;}
 .elementor-60 .elementor-element.elementor-element-5582aba > .elementor-container > .elementor-column > .elementor-widget-wrap {align-content: center;align-items: center;}
 .elementor-60 .elementor-element.elementor-element-e2c8921 .elementor-text-editor {text-align: left;}
 .elementor-60 .elementor-element.elementor-element-e2c8921 {color: #252525;font-family: "Roboto",Sans-serif;font-size: 20px;font-weight: 400;}
@@ -18,6 +19,9 @@
 .elementor-60 .elementor-element.elementor-element-8a73113 .elementor-divider {text-align: center;padding-top: 15px;padding-bottom: 15px;}
 .elementor-60 .elementor-element.elementor-element-4855873 .elementor-text-editor {text-align: center;}
 .elementor-60 .elementor-element.elementor-element-4855873 {font-family: "Roboto Condensed",Sans-serif;font-size: 11px;font-weight: 400;}
+.elementor-60 .elementor-element.elementor-element-df0f9d5 {padding: 20px 0px 0px 0px;}
+.elementor-60 .elementor-element.elementor-element-106daa3 .elementor-text-editor {text-align: center;}
+.elementor-60 .elementor-element.elementor-element-106daa3 > .elementor-widget-container {margin: 0px 0px 0px 0px;background-color: transparent;background-image: linear-gradient(180deg,#fff 0%,#e9e9e9 100%);}
 @media (min-width:768px) {.elementor-60 .elementor-element.elementor-element-a14b76a {width: 19.85%;}
 	.elementor-60 .elementor-element.elementor-element-47bec14 {width: 79.815%;}
 	.elementor-60 .elementor-element.elementor-element-b6463ea {width: 19.85%;}
